[gd_scene load_steps=13 format=2]

[ext_resource path="res://dependeciaTrivia/2.png" type="Texture" id=1]
[ext_resource path="res://dependeciaTrivia/buttons_negativo.png" type="Texture" id=2]
[ext_resource path="res://dependeciaTrivia/bot_afirmativo.png" type="Texture" id=3]
[ext_resource path="res://trivia2.0.gd" type="Script" id=4]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://dependeciaTrivia/POP-UP-SemTransicao(EFEITO).png" type="Texture" id=6]
[ext_resource path="res://dependeciaTrivia/exit.png" type="Texture" id=7]
[ext_resource path="res://dependeciaTrivia/Design sem nome.png" type="Texture" id=8]
[ext_resource path="res://dependeciaTrivia/play.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/Symtext.ttf"

[sub_resource type="DynamicFont" id=1]
size = 7
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = ExtResource( 5 )

[node name="Trivia" type="Node2D"]
scale = Vector2( 1.4287, 1.36698 )
script = ExtResource( 4 )

[node name="Buttonafimat" type="Button" parent="."]
margin_left = 254.077
margin_top = 226.046
margin_right = 296.077
margin_bottom = 266.046
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonnegat" type="Button" parent="."]
margin_left = 108.49
margin_top = 216.536
margin_right = 156.49
margin_bottom = 267.536
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 209.431, 138.849 )
scale = Vector2( 1.04827, 1.04827 )
current = true
zoom = Vector2( 0.9, 1 )

[node name="Branco" type="Sprite" parent="."]
position = Vector2( 205.781, 144.845 )
scale = Vector2( 0.246264, 0.265188 )
texture = ExtResource( 1 )

[node name="Botaoafimativo" type="Sprite" parent="Branco"]
position = Vector2( -88.5102, 98.1773 )
rotation = -3.14159
scale = Vector2( 1.12906, 1.04849 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Branco"]
position = Vector2( -960.968, -515.431 )
scale = Vector2( 2.25812, 2.09698 )

[node name="butnegati" type="Sprite" parent="Branco"]
position = Vector2( -354.041, 98.1773 )
rotation = 3.14159
scale = Vector2( 1.12906, 1.04849 )
texture = ExtResource( 2 )

[node name="Labelp1" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 96.5913
margin_top = 40.2347
margin_right = 214.591
margin_bottom = 117.235
rect_scale = Vector2( 1.90263, 1.90263 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pop-Up-SemTransicao(Efeito)" type="Sprite" parent="."]
visible = false
position = Vector2( 202.982, 57.0601 )
scale = Vector2( 0.109314, 0.109314 )
texture = ExtResource( 6 )

[node name="errou" type="Label" parent="Pop-Up-SemTransicao(Efeito)"]
margin_left = -697.929
margin_top = -173.995
margin_right = 711.071
margin_bottom = 295.005
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "VocÃª errou"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="telamenu" type="Sprite" parent="."]
position = Vector2( 208.581, 141.801 )
scale = Vector2( 0.243078, 0.249483 )
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="telamenu"]
margin_left = 124.0
margin_top = 274.0
margin_right = 350.0
margin_bottom = 354.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play2" type="Sprite" parent="telamenu"]
position = Vector2( -79.0588, 148.571 )
scale = Vector2( 0.705882, 0.714286 )
texture = ExtResource( 9 )

[node name="play" type="Button" parent="telamenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -373.0
margin_top = 274.0
margin_right = -169.0
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Sprite" parent="telamenu"]
position = Vector2( 274.381, 333.148 )
scale = Vector2( 0.705882, 0.714286 )
texture = ExtResource( 7 )
offset = Vector2( -308.706, -258.408 )

[node name="saida1" type="Button" parent="telamenu/exit"]
modulate = Color( 1, 1, 1, 0.0627451 )
margin_left = -226.0
margin_top = -80.0
margin_right = 105.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Sprite" parent="."]
visible = false
position = Vector2( 329.67, 193.126 )
scale = Vector2( 0.175326, 0.175326 )
texture = ExtResource( 7 )

[node name="saida" type="Button" parent="Exit"]
modulate = Color( 1, 1, 1, 0.0862745 )
margin_left = 100.0
margin_top = 175.0
margin_right = 411.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttonafimat" to="." method="_on_Buttonafimat_pressed"]
[connection signal="pressed" from="Buttonnegat" to="." method="_on_Buttonnegat_pressed"]
[connection signal="pressed" from="telamenu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="telamenu/exit/saida1" to="." method="_on_saida1_pressed"]
[connection signal="pressed" from="Exit/saida" to="." method="_on_saida_pressed"]
